static/css/new_sgn.css
/* NOTE: SGN blue is #ccccff */
/********************     GENERAL SITE STYLES     **********************/
/*body {
  color: black;
  background-color: white;
  font-family: verdana, arial, helvetica, sans-serif;
  font-size: 12px;
  line-height: 1.25;
}
*/

/*#sgn_container {
  max-width:1000px;
  margin-left: auto;
  margin-right: auto;
  padding: 0px;
}
*/

/*#pagecontent_t {
  margin: auto;
  width: 730px;
}
*/

#wrapper {
	min-height:100%;
	position:relative;
}

#xtratbl {
background-color:#CCCCFF;
border: 1px solid #C0C0C0;
}
#org_content{
border:1px solid #C0C0C0;
}
table {
  font-family: verdana, arial, helvetica, sans-serif;
  font-size: 12px;
  text-align: left;
  padding: 0;
  border: 0;
  border-collapse: separate;
}
input, select, textarea {
  background: #EEEEFF;
  font-size: 12px;
}
li { 
  margin-bottom: 0.25em;
}
td {
  vertical-align: top;
}

/*various places on the site use various headline size tags, so let's try to make them all the same*/
h1,h2,h3,h4,h5,h6 {
  font-family: verdana, arial, helvetica, sans-serif;
  font-size: 14px;
  line-height: 16px;
}
dt { 
  font-weight: bold;
  margin-bottom: 0.1em;
}
dd { 
  margin-bottom: 0.5em;
  margin-left: 2.5em;
}
dt.sub { /* used for a second sublevel of dictionary terms */
  font-weight: normal;
  font-style: italic;
}

/* where to put the title image  */
td.sgnlogo { 
  vertical-align: top;
}
img {
  border: 0;
}

img#sgnlogo { 
  margin: -7px 6px 0 0;
}
img#sgntext { 
  margin: 0 0 2px 12px;
}
td.toplink { 
  text-align: right;
  vertical-align: middle;
  padding: 0 18px 0 0;
  white-space: nowrap;
}
a.toplink:link, a.toplink:visited, a.toplink:active {
  color: black;
  padding: 0;
  text-decoration: none;
  line-height: 1.1;
  font-family: "Bitstream Vera Sans",Arial,Helvetica,sans-serif;
}
a.toplink:hover {
  padding: 0px 0px 0px 0px;
  text-decoration: underline;
}
a.mytools, a.mytools:link, a.mytools:visited { 
  font-weight: bold;
  text-decoration: underline;
  color: black;
  padding: 0.1em 0.3em 0.1em 0.3em;
  line-height: 1.38;
  margin-left: 1em;
}
a.external, a[href ^="http:"] { 
	background: url(/documents/img/external.png) center right no-repeat;
	padding-right: 13px;
}

a.footer {
	background: none;
	padding-right: 2px;
}

a[href ^="mailto:"]  { 
	background: url(/documents/img/mail_icon.gif) center right no-repeat;
	padding-right: 16px;
}

#pagefooter {
  height:275px;
  padding: 2px 0px;
  margin: 0px;
  position:absolute;
  bottom:0;
  left:0;
  width:100%;

}

#pagefooter a, #pagefooter a:active, #pagefooter a:link, #pagefooter a:visited { 
  color: #666666;
}

#quicksearch_form { 
  margin: 10px 0px 0px 0px;
}

td.clonecart { 
  vertical-align: middle;
  text-align: center;
}
#clone_shoppingcart { 
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
}

/* this is a centered page title, like 'BAC P00343' or 'Marker TM2' or whatever */
#pagetitle { 
  text-align: center;
  margin: 0;
  padding: 0;
}
#pagetitle > h3 {
  text-align: center;
  margin-top: 0;
  padding: 0;
}

/* Developer Toolbar Style */
div.devbar {
	width: 100%;
        padding: 5px;
        margin: -8px 0 13px -5px;

	text-align: center;
	background-color: #eef;
	border-bottom: 2px solid #905;
}
/**Everything visible is in a table, use this to style fonts**/
table.devbar {
	font-size:1.0em;
}

/* general div to make something a little more indented */
div.indentedcontent, div.indented_content, div.page_introduction {
  margin: 0.3em 1em 2em 2em;
}
div.page_introduction {
  padding: 0.3em;
}

/* same effect as above, except for table cells.  Don't make new pages that use this. */
td.indentedcontent, td.indented_content {
  padding: 1em 1em 2em 2em;
}
/*generic text-align tags*/
.center { 
  text-align:center;
}
.right { 
  text-align:right;
}
.left { 
  text-align:left;
}

/* the little tables at the top of search forms with */
/* the title of the search and a "select random" link */
table.search_form_title { 
  width: 100%;
}
span.search_form_title { 
  font-weight: bold;
  margin-bottom: 1em;
  display: block;
}
a.search_form_random {
  font-size: 75%;
}
a.search_form_random:before {
  content: '[';
}
a.search_form_random:after {
  content: ']';
}

/*****************************     LINKS     ************************************************************/
/*                                                                                                      */

a:link  {
  color:#0000ff;
  text-decoration:none;
}
a:active  {
  color:#0000ff;
  text-decoration:none;
}
a:visited  {
  color:#3333ff;
  text-decoration:none;
}
a:hover { 
  text-decoration:underline;
}
a.hidevisited:link  {
  color:#0000ff;
  text-decoration:none;
}
a.hidevisited:active {
  color:#0000ff;
  text-decoration:none;
}
a.hidevisited:visited  {
  color:#0000ff;
  text-decoration:none;
}
a.hidevisited:hover {
  color:#0000ff;
  text-decoration:underline;
}
a.quicksearch_hit { 
  font-weight: bold;
/*   background: #ccccff;  */
/*   border: 1px solid #9f9fc7; */
}

/*makes a submit button that looks more like a link*/
input.linkstyle { 
  color:#0000ff;
  text-decoration:none;
  background:#ffffff;
  border:0;
  font-size:12px;
}
/*makes a submit button that looks more like a link*/
input.linkstyle:hover { 
  color:#0000ff;
  text-decoration:underline;
  background:#ffffff;
  border:0;
  font-size:12px;
}

/* for little "what's this" links leading to help pages */
a.context_help {
  font-size: 80%;
  letter-spacing: -1px;
  font-weight: normal;
}
a.context_help:before { 
  content: '(';
  color: black;
}
a.context_help:after { 
  content: ')';
  color: black;
}

/*****************************     FONTS     ************************************************************/
/*Don't add one if you can use one that's already here. It will keep our fonts more consistent.         */

pre {
	font-family: bitstream vera sans mono, monospace;
	font-size: 12px;
	line-height: 13px;
}
/* ... */

